# xagent

./: .gitignore  agent.bat  agent.sh  index.html  package-lock.json  package.json  vite.config.ts  web_client.bat  xagent.bat
opencode-bridge/: README.md  package-lock.json  package.json
opencode-bridge/src/: bridge.ts  index.ts  opencode-client.ts  types.ts
scripts/: save.ps1
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/agent/: AgentApp.tsx  ChatView.tsx  ConnectOverlay.tsx  InputBar.tsx  NewSessionOverlay.tsx  PermissionDialog.tsx  SessionBar.tsx  types.ts  useBridge.ts
src/components/: NewSessionModal.tsx  PromptOverlay.tsx  SessionList.tsx  TerminalView.tsx
src/hooks/: usePromptDetection.ts
web-client/: agent.html  index.html
