[package]
name = "xagent"
version = "0.1.0"
description = "xAgent - Remote terminal for AI CLI agents"
authors = ["xAgent"]
edition = "2021"

[lib]
name = "xagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

